<?xml version="1.0" encoding="utf-8"?>
<!-- res/menu/menu_bottom_nav.xml -->
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/nav_home"
        android:icon="@drawable/ic_nav_home"
        android:title="@string/nav_home"
        android:menuCategory="secondary" />

    <item
        android:id="@+id/nav_search"
        android:icon="@drawable/ic_nav_search"
        android:title="@string/nav_search"
        android:menuCategory="secondary" />

    <item
        android:id="@+id/nav_saved"
        android:icon="@drawable/ic_nav_saved"
        android:title="@string/nav_saved"
        android:menuCategory="secondary" />

    <item
        android:id="@+id/nav_profile"
        android:icon="@drawable/ic_nav_profile"
        android:title="@string/nav_profile"
        android:menuCategory="secondary" />

</menu>